refactor: open api auction response dto record로 변경